--- a/blog2.html
+++ b/blog2.html
@@ -189,11 +189,11 @@
             </nav>
         </header>
         <!-- /header -->
-        <!--div style="text-align: center;">
-                <a href="#" target="_blank">
+        <div style="text-align: center;">
+                <a href="#" target="_blank"-->
                     <img class="responsive-img" src="gif/about.gif">
                 </a>
-            </div-->
+            </div>
             <section>
             <style>
 
@@ -424,19 +424,14 @@ body {
 	font-size: 12px;
 	padding: 0.5% 0;
 }
-@media only screen and (width: 1024px) {
-        .footer-area {
-          background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/home-section2.jpg);
-          background-size: cover;
-        }
-      }
 
-@media (max-width: 480px) {
 .footer-area {
-	background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/footeroverlay.jpg);
+	background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/footeroverlay.jpg) 
+    no-repealt bottom center fixed !important;
 	padding: 20px 0;
+
 }
-}
+
 
     .footer-content ul {
 	padding: 0 3px;
