--- a/blog2.html
+++ b/blog2.html
@@ -426,7 +426,8 @@ body {
 }
 
 .footer-area {
-	background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/footeroverlay.jpg);
+	background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/footeroverlay.jpg) 
+    bottom center fixed !important;
 	padding: 20px 0;
 
 }
