--- a/blog2.html
+++ b/blog2.html
@@ -427,7 +427,7 @@ body {
 
 .footer-area {
 	background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/footeroverlay.jpg) 
-    bottom center fixed !important;
+    center fixed !important;
 	padding: 20px 0;
 
 }
