--- a/blog2.html
+++ b/blog2.html
@@ -426,8 +426,7 @@ body {
 }
 
 .footer-area {
-	background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/footeroverlay.jpg) 
-    center !important;
+	background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/footeroverlay.jpg) ;
 	padding: 20px 0;
 
 }
