--- a/blog2.html
+++ b/blog2.html
@@ -470,6 +470,11 @@ body {
             <div class="container">
                       <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
       </div>
+
+      <div class="sidden-sm col-md-3 footer-content">
+          
+        <h2 class="sidden-sm col-md-3 footer-content">“INDIVISA MANENT”</h2>
+      </div>
       
       <div class="col-md-3 col-sm-3 footer-content">  <div class="region region-quicklinks1">
         <div id="block-block-13" class="block block-block">
