--- a/blog2.html
+++ b/blog2.html
@@ -473,7 +473,7 @@ body {
 
       <div class="sidden-sm col-md-3 footer-content">
           
-        <h2 class="sidden-sm col-md-3 footer-content">“INDIVISA MANENT”</h2>
+        <h2>“INDIVISA MANENT”</h2>
       </div>
       
       <div class="col-md-3 col-sm-3 footer-content">  <div class="region region-quicklinks1">
