--- a/blog2.html
+++ b/blog2.html
@@ -471,7 +471,7 @@ body {
                       <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
       </div>
 
-      <div class="sidden-sm col-md-3 footer-content-logo"><h2> “INDIVISA MANENT” </h2>
+      <div class="sidden-sm col-md-3 footer-content-logo">< “INDIVISA MANENT” >
       </div>
       
       <div class="col-md-3 col-sm-3 footer-content">  <div class="region region-quicklinks1">
