--- a/blog2.html
+++ b/blog2.html
@@ -470,9 +470,9 @@ body {
             <div class="container">
                       <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
       </div>
-
-      <div class="sidden-sm col-md-3 footer-content-logo">< “INDIVISA MANENT” >
+      <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
       </div>
+
       
       <div class="col-md-3 col-sm-3 footer-content">  <div class="region region-quicklinks1">
         <div id="block-block-13" class="block block-block">
