--- a/blog2.html
+++ b/blog2.html
@@ -465,7 +465,7 @@ body {
 }
 
 ul {
-  list-style: none; /* Remove default bullets */
+  list-style: circle; /* Remove default bullets */
 }
 
 ul li::before {
