--- a/blog2.html
+++ b/blog2.html
@@ -461,11 +461,12 @@ body {
 }
 
 .footer-content p {
+    font-family: 'Poppins', sans-serif;
 	color: #ffffff !important;
 }
 
 ul {
-  list-style: circle; /* Remove default bullets */
+  list-style: none; /* Remove default bullets */
 }
 
 ul li::before {
