--- a/blog2.html
+++ b/blog2.html
@@ -478,6 +478,41 @@ ul li::before {
   margin-left: -1em; /* Also needed for space (tweak if needed) */
 }
 
+/***HR LINE**/
+.hr-text {
+  line-height: 1em;
+  position: relative;
+  outline: 0;
+  border: 0;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  height: 1.5em;
+  opacity: .5;
+  &:before {
+    content: '';
+    // use the linear-gradient for the fading effect
+    // use a solid background color for a solid bar
+    background: linear-gradient(to right, transparent, #818078, transparent);
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 1px;
+  }
+  &:after {
+    content: attr(data-content);
+    position: relative;
+    display: inline-block;
+    color: rgb(255, 255, 255);
+
+    padding: 0 .5em;
+    line-height: 1.5em;
+    // this is really the only tricky part, you need to specify the background color of the container element...
+    color: #818078;
+    background-color: #fcfcfa;
+  }
+}
+
         </style>
         <!-- Footer -->
         <div class="footer-area">
@@ -559,7 +594,7 @@ ul li::before {
     </div>
       </div>
     </div>
-    <hr>
+    <hr class="hr-text" data-content="©️ 2021 All Right Reserved">
     <div class="container">
     <div>  
         <p style="text-align: justify;"><font size="auto" color="#FFFFFF">Disclaimer:<br/> The contents in the website are for information purpose only. DLS College ICT Unite regularly monitors and updates the information on this website. We attempt to ensure that the information on this website is correct, however, we do not warrant its completeness or accuracy. No rights can be derived from the information contained in the DLS College Official website. The website may contain links to websites of third party organizations.We cannot be held responsible for any consequences arising from the use of information obtained from these websites.Designed and Developed by Kasun Chanuka Fernando</font></p>
