--- a/blog2.html
+++ b/blog2.html
@@ -483,13 +483,12 @@ ul li::before {
   line-height: 1em;
   position: relative;
   outline: 0;
-  border: 0;
   color: rgb(255, 255, 255);
   text-align: center;
   height: 1.5em;
-  opacity: 0;
+}
   &:before {
-    content: '© Copyright 2021 | De La Salle College, Mutwal, Sri Lanka.<br> All Rights Reserved.';
+    content: '';
     // use the linear-gradient for the fading effect
     // use a solid background color for a solid bar
     background: linear-gradient(to right, transparent, #818078, transparent);
