--- a/blog2.html
+++ b/blog2.html
@@ -506,7 +506,7 @@ ul li::before {
   padding: 0 0.5em;
   line-height: 1.5em;
   color: #818078;
-  background-color: #fcfcfa;
+  background-color: #0e0d37;
 }
 
         </style>
