--- a/blog2.html
+++ b/blog2.html
@@ -505,8 +505,8 @@ ul li::before {
   color: black;
   padding: 0 0.5em;
   line-height: 1.5em;
-  color: #818078;
-  background-color: #0e0d37;
+  color: #ffffff;
+  background-color: #0e0d3754;
 }
 
         </style>
