--- a/blog2.html
+++ b/blog2.html
@@ -502,7 +502,7 @@ ul li::before {
   content: attr(data-content);
   position: relative;
   display: inline-block;
-  color: black;
+  color: rgb(235, 235, 235);
   padding: 0 0.5em;
   line-height: 1.5em;
   color: #ffffff;
