--- a/blog2.html
+++ b/blog2.html
@@ -447,11 +447,11 @@ body {
 	color: #ffffff !important;
 }
 
-ul {
+.footer-content ul {
   list-style: none; /* Remove default bullets */
 }
 
-ul li::before {
+.footer-content ul li::before {
   content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
   color: rgb(255, 255, 255); /* Change the color */
   font-weight: bold; /* If you want it to be bold */
