--- a/blog2.html
+++ b/blog2.html
@@ -532,9 +532,9 @@ body {
         
         <div class="content">
           <ul class="menu clearfix"><li class="first leaf"><a href="History-and-Location.html" title="">History</a></li>
-      <li class="leaf"><a href="/names-designation-current-heads" title="">School Administration</a></li>
+      <li class="leaf"><a href="Organizational-Structure.html" title="">School Administration</a></li>
       <li class="leaf"><a href="obu.html" title="">OBU</a></li>
-      <li class="leaf"><a href="/scholarships" title="">Scholarships</a></li>
+      <li class="leaf"><a href="admissions.html" title="">Scholarships</a></li>
       <li class="last leaf"><a href="contact-us.html" title="">Contact us</a></li>
       </ul>  </div>
       </div>
