--- a/blog2.html
+++ b/blog2.html
@@ -497,6 +497,11 @@ body {
             <div class="container">
                       <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
       </div>
+      <div>
+          <a href="www.dhanum-saviya.blogspot.com" target="_blank">
+          <img src="/College Assests/College-Items/access-to-lms.png" height="auto" width="auto">
+          </a>
+        </div>
 
       
       <div class="col-md-3 col-sm-3 footer-content">  <div class="region region-quicklinks1">
