--- a/blog2.html
+++ b/blog2.html
@@ -498,7 +498,7 @@ body {
                       <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
       </div>
       <div>
-          <a href="www.dhanum-saviya.blogspot.com" target="_blank">
+          <a href="https://www.dhanum-saviya.blogspot.com" target="_blank">
           <img src="College Assests/College-Items/access-to-lms.png" height="auto" width="auto">
           </a>
         </div>
