--- a/blog2.html
+++ b/blog2.html
@@ -499,7 +499,7 @@ body {
       </div>
       <div>
           <a href="https://www.dhanum-saviya.blogspot.com" target="_blank">
-          <img src="College Assests/College-Items/access-to-lms.png" height="auto" width="auto">
+          <img src="College Assests/College-Items/access-to-lms.png" height="100px" width="auto">
           </a>
         </div>
 
