--- a/blog2.html
+++ b/blog2.html
@@ -496,12 +496,12 @@ body {
         <div class="footer-area">
             <div class="container">
                       <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
+                        <div>
+                            <a href="https://www.dhanum-saviya.blogspot.com" target="_blank">
+                            <img src="College Assests/College-Items/access-to-lms.png" height="100px" width="auto" class="img-responsive">
+                            </a>
+                          </div>
       </div>
-      <div>
-          <a href="https://www.dhanum-saviya.blogspot.com" target="_blank">
-          <img src="College Assests/College-Items/access-to-lms.png" height="100px" width="auto">
-          </a>
-        </div>
 
       
       <div class="col-md-3 col-sm-3 footer-content">  <div class="region region-quicklinks1">
