--- a/blog2.html
+++ b/blog2.html
@@ -541,10 +541,13 @@ body {
       <li class="leaf"><a href="obu.html" title="">OBU</a></li>
       <li class="leaf"><a href="admissions.html" title="">Scholarships</a></li>
       <li class="last leaf"><a href="contact-us.html" title="">Contact us</a></li>
+      <li class="last leaf"><a href="https://www.dhanum-saviya.blogspot.com" target="_blank">
+        <img src="College Assests/College-Items/access-to-lms.png" height="90px" width="auto" position="left" class="img-responsive"></a></li>
       </ul>  </div>
       </div>
         </div>
       </div>
+            </div>
                               <div class="col-md-3 col-sm-3 footer-content">  <div class="region region-contact-us">
           <div id="block-menu-menu-footer-second-menu" class="block block-menu">
       
