--- a/blog2.html
+++ b/blog2.html
@@ -498,7 +498,7 @@ body {
                       <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
                         <div>
                             <a href="https://www.dhanum-saviya.blogspot.com" target="_blank">
-                            <img src="College Assests/College-Items/access-to-lms.png" height="90px" width="auto" class="img-responsive">
+                            <img src="College Assests/College-Items/access-to-lms.png" height="55px" width="auto" class="img-responsive">
                             </a>
                           </div>
       </div>
@@ -540,10 +540,8 @@ body {
       <li class="leaf"><a href="Organizational-Structure.html" title="">School Administration</a></li>
       <li class="leaf"><a href="obu.html" title="">OBU</a></li>
       <li class="leaf"><a href="admissions.html" title="">Scholarships</a></li>
-      <li class="last"><a href="contact-us.html" title="">Contact us</a></li>
-      <li class="last leaf"><a href="https://www.dhanum-saviya.blogspot.com" title="" target="_blank"><img src="College Assests/College-Items/access-to-lms.png" height="33px" width="auto" class="img-responsive"></a></li>
-      
-</ul>  </div>
+      <li class="last leaf"><a href="contact-us.html" title="">Contact us</a></li>
+      </ul>  </div>
       </div>
         </div>
       </div>
