--- a/blog2.html
+++ b/blog2.html
@@ -565,7 +565,7 @@ body {
         <h2>Get in touch</h2>
       
         <div class="content">
-            <a href="#!"><i class="fa fa-facebook" aria-hidden="true"
+            <a href="https://www.facebook.com/DeLaSalleCollegeColombo"><i class="fa fa-facebook" aria-hidden="true"
                             title="Official Facebook Page"></i></a>
             <a href=""><i class="fa fa-github" aria-hidden="true"
                                                   title="Github Group"></i></a>
