--- a/Physical-Facilities.html
+++ b/Physical-Facilities.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De La Salle College Colombo 15 | Physical Facilities </title>
 
     <!--favicon-->
