--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ $(document).ready(function(){
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                 </ul>
                             </li>
-                            <li><a href="contact-us.html">CONTACT US</a></li>
+                            <!--li><a href="contact-us.html">CONTACT US</a></li-->
                         </ul>
                     </div>
                     <!--/.nav-collapse -->
