--- a/index.html
+++ b/index.html
@@ -1076,6 +1076,7 @@ $(document).ready(function(){
         </div>
     </div>
 </section>
+</div>
 
     <!-- Footer -->
     <div class="footer-area">
