--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ $(document).ready(function(){
         max-width: 300px;
       }
 
-      .content {
+      .content-box {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -599,7 +599,7 @@ $(document).ready(function(){
       <!--figure>
                   <img src="crest.png" alt="De La Salle College">
               </figure-->
-      <div class="content">
+      <div class="content-box">
         <div class="box">
           <h1>
             Welcome to De La Salle College,Colombo - Indivisa Manent
