--- a/index.html
+++ b/index.html
@@ -1151,12 +1151,12 @@ $(document).ready(function(){
         <h2>Get in touch</h2>
       
         <div class="content">
-            <a href="https://www.facebook.com/DeLaSalleCollegeColombo"><i class="fa fa-facebook" aria-hidden="true"
+            <a href="https://www.facebook.com/DeLaSalleCollegeColombo"><i class="fab fa-facebook" aria-hidden="true"
                             title="Official Facebook Page"></i></a>
-            <a href=""><i class="fa fa-github" aria-hidden="true"
+            <a href=""><i class="fab fa-github" aria-hidden="true"
                                                   title="Github Group"></i></a>
-            <a href="#!"><i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
-            <a href="#!" title=""><i class="fa fa-twitter" aria-hidden="true"
+            <a href="#!"><i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
+            <a href="#!" title=""><i class="fab fa-twitter" aria-hidden="true"
                                      title="Official Twitter Account"></i></a>
         </div>
      </div>
