--- a/Identity/college-motto-and-flag_colours.html
+++ b/Identity/college-motto-and-flag_colours.html
@@ -252,6 +252,7 @@
 .post-full-content {
     position: relative;
     margin: -28px auto;
+    margin-bottom: 0px;
     padding: 4rem 4rem;
     min-height: 230px;
     font-size: 1.8rem;
@@ -349,14 +350,14 @@ body {
     </div>
         </body>
         <!--BODY END-->
-        
+
 <!--Footer-->
 <div class="footer-area">
     <div class="container">
               <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
                 <div>
                     <a href="https://www.dhanum-saviya.blogspot.com" target="_blank">
-                    <img src="College Assests/College-Items/access-to-lms.png" height="40px" width="auto" class="img-responsive">
+                    <img src="../College Assests/College-Items/access-to-lms.png" height="40px" width="auto" class="img-responsive">
                     </a>
                   </div>
 </div>
@@ -394,11 +395,11 @@ Phone: 011 2 522 125</p>
   <h2>Quick Links</h2>
 
 <div class="content">
-  <ul class="menu clearfix"><li class="first leaf"><a href="History-and-Location.html" title="">History</a></li>
-<li class="leaf"><a href="Organizational-Structure.html" title="">School Administration</a></li>
-<li class="leaf"><a href="obu.html" title="">OBU</a></li>
-<li class="leaf"><a href="admissions.html" title="">Scholarships</a></li>
-<li class="last leaf"><a href="contact-us.html" title="">Contact us</a></li>
+  <ul class="menu clearfix"><li class="first leaf"><a href="../History-and-Location.html" title="">History</a></li>
+<li class="leaf"><a href="../Organizational-Structure.html" title="">School Administration</a></li>
+<li class="leaf"><a href="../obu.html" title="">OBU</a></li>
+<li class="leaf"><a href="../admissions.html" title="">Scholarships</a></li>
+<li class="last leaf"><a href="../contact-us.html" title="">Contact us</a></li>
 </ul>  </div>
 </div>
 </div>
@@ -409,9 +410,9 @@ Phone: 011 2 522 125</p>
   <h2>Media</h2>
 
 <div class="content">
-  <ul class="menu clearfix"><li class="first leaf"><a href="Privacy-Policy.html" title="">Privacy</a></li>
-<li class="leaf"><a href="gallery.html" title="">Gallery</a></li>
-<li class="last leaf"><a href="blog.html" title="">News and Events</a></li>
+  <ul class="menu clearfix"><li class="first leaf"><a href="../Privacy-Policy.html" title="">Privacy</a></li>
+<li class="leaf"><a href="../gallery.html" title="">Gallery</a></li>
+<li class="last leaf"><a href="../blog.html" title="">News and Events</a></li>
 </ul>  </div>
 </div>
 </div>
