--- a/Identity/mission-vision.html
+++ b/Identity/mission-vision.html
@@ -459,11 +459,11 @@ body {
           <h2>Quick Links</h2>
         
         <div class="content">
-          <ul class="menu clearfix"><li class="first leaf"><a href="History-and-Location.html" title="">History</a></li>
-      <li class="leaf"><a href="Organizational-Structure.html" title="">School Administration</a></li>
-      <li class="leaf"><a href="obu.html" title="">OBU</a></li>
-      <li class="leaf"><a href="admissions.html" title="">Scholarships</a></li>
-      <li class="last leaf"><a href="contact-us.html" title="">Contact us</a></li>
+          <ul class="menu clearfix"><li class="first leaf"><a href="../History-and-Location.html" title="">History</a></li>
+      <li class="leaf"><a href="../Organizational-Structure.html" title="">School Administration</a></li>
+      <li class="leaf"><a href="../obu.html" title="">OBU</a></li>
+      <li class="leaf"><a href="../admissions.html" title="">Scholarships</a></li>
+      <li class="last leaf"><a href="../contact-us.html" title="">Contact us</a></li>
       </ul>  </div>
       </div>
         </div>
@@ -474,9 +474,9 @@ body {
           <h2>Media</h2>
         
         <div class="content">
-          <ul class="menu clearfix"><li class="first leaf"><a href="Privacy-Policy.html" title="">Privacy</a></li>
-      <li class="leaf"><a href="gallery.html" title="">Gallery</a></li>
-      <li class="last leaf"><a href="blog.html" title="">News and Events</a></li>
+          <ul class="menu clearfix"><li class="first leaf"><a href="../Privacy-Policy.html" title="">Privacy</a></li>
+      <li class="leaf"><a href="../gallery.html" title="">Gallery</a></li>
+      <li class="last leaf"><a href="../blog.html" title="">News and Events</a></li>
       </ul>  </div>
       </div>
         </div>
