--- a/Identity/mission-vision.html
+++ b/Identity/mission-vision.html
@@ -286,6 +286,7 @@
 .post-full-content {
     position: relative;
     margin: -28px auto;
+    margin-bottom: 0px;
     padding: 4rem 4rem;
     min-height: 230px;
     font-size: 1.8rem;
