--- a/Blogs/Our-New-College-Website-Has-Been-Launched.html
+++ b/Blogs/Our-New-College-Website-Has-Been-Launched.html
@@ -278,6 +278,7 @@ border-top: 0.5rem solid var(--primary);
 .post-full-content {
 position: relative;
 margin: -28px auto;
+margin-bottom: 0px;
 padding: 4rem 4rem;
 min-height: 230px;
 font-size: 1.8rem;
@@ -956,7 +957,7 @@ transition: .5s;
                   <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
                     <div>
                         <a href="https://www.dhanum-saviya.blogspot.com" target="_blank">
-                        <img src="College Assests/College-Items/access-to-lms.png" height="40px" width="auto" class="img-responsive">
+                        <img src="../College Assests/College-Items/access-to-lms.png" height="40px" width="auto" class="img-responsive">
                         </a>
                       </div>
   </div>
@@ -994,11 +995,11 @@ transition: .5s;
       <h2>Quick Links</h2>
     
     <div class="content">
-      <ul class="menu clearfix"><li class="first leaf"><a href="History-and-Location.html" title="">History</a></li>
-  <li class="leaf"><a href="Organizational-Structure.html" title="">School Administration</a></li>
-  <li class="leaf"><a href="obu.html" title="">OBU</a></li>
-  <li class="leaf"><a href="admissions.html" title="">Scholarships</a></li>
-  <li class="last leaf"><a href="contact-us.html" title="">Contact us</a></li>
+      <ul class="menu clearfix"><li class="first leaf"><a href="../History-and-Location.html" title="">History</a></li>
+  <li class="leaf"><a href="../Organizational-Structure.html" title="">School Administration</a></li>
+  <li class="leaf"><a href="../obu.html" title="">OBU</a></li>
+  <li class="leaf"><a href="../admissions.html" title="">Scholarships</a></li>
+  <li class="last leaf"><a href="../contact-us.html" title="">Contact us</a></li>
   </ul>  </div>
   </div>
     </div>
@@ -1010,8 +1011,8 @@ transition: .5s;
     
     <div class="content">
       <ul class="menu clearfix"><li class="first leaf"><a href="Privacy-Policy.html" title="">Privacy</a></li>
-  <li class="leaf"><a href="gallery.html" title="">Gallery</a></li>
-  <li class="last leaf"><a href="blog.html" title="">News and Events</a></li>
+  <li class="leaf"><a href="../gallery.html" title="">Gallery</a></li>
+  <li class="last leaf"><a href="../blog.html" title="">News and Events</a></li>
   </ul>  </div>
   </div>
     </div>
