--- a/blog.html
+++ b/blog.html
@@ -252,10 +252,10 @@
                                             </a>
                                         </div>
                                         <div class="blog-info">
-                                            <h5><a href="#">Our New College Website Has Been Launched</a></h5>
+                                            <h5><a href="news/our-new-college-website-has-been-launched.php.html">Our New College Website Has Been Launched</a></h5>
                                             <p>we are so excited announce The launch of our redesigned website and launch announcement on December 11th, 2021, after nearly two months of the efforts and dedication of our college student Mast Kasun Chanuka.</p>
                                             <div class="btn-bar">
-                                                <a href="#" class="px-btn-arrow">
+                                                <a href="news/our-new-college-website-has-been-launched.php.html" class="px-btn-arrow">
                                                     <span>Read More</span>
                                                     <i class="arrow"></i>
                                                 </a>
@@ -271,7 +271,7 @@
                                                 <label>Nov</label>
                                             </div>
                                             <a href="https://www.facebook.com/pg/DeLaSalleCollegeColombo/posts/">
-                                                <img src="Blogs/photo_2021-11-16_01-10-22dlsc.jpg" title="" alt="">
+                                                <img src="News and Events/photo_2021-11-16_01-10-22dlsc.jpg" title="" alt="">
                                             </a>
                                         </div>
                                         <div class="blog-info">
@@ -294,7 +294,7 @@
                                                 <label>OCT</label>
                                             </div>
                                             <a href="#">
-                                                <img src="Blogs/welcoming rev bro jayakanthan.jpg" title="" alt="">
+                                                <img src="News and Events/welcoming rev bro jayakanthan.jpg" title="" alt="">
                                             </a>
                                         </div>
                                         <div class="blog-info">
