--- a/blog.html
+++ b/blog.html
@@ -247,7 +247,7 @@
                                                 <span>11</span>
                                                 <label>DEC</label>
                                             </div>
-                                            <a href="#">
+                                            <a href="news/our-new-college-website-has-been-launched.php.html">
                                                 <img src="mockups/mockupitemd.jpg" title="" alt="">
                                             </a>
                                         </div>
