--- a/blog.html
+++ b/blog.html
@@ -275,7 +275,7 @@
                                             </a>
                                         </div>
                                         <div class="blog-info">
-                                            <h5><a href="#">Nearly after 10 months a Holy Mass offered by senior students of the college,</a></h5>
+                                            <h5><a href="https://www.facebook.com/pg/DeLaSalleCollegeColombo/posts/">Nearly after 10 months a Holy Mass offered by senior students of the college,</a></h5>
                                             <p>Nearly after 10 months a Holy Mass offered by senior students of the college and followed by a Seminar conducted by Faith Animation Team priests headed by Rev Fr Gihan Gunatilleke held on 11th November at the College Chapel.</p>
                                             <div class="btn-bar">
                                                 <a href="#" class="px-btn-arrow">
