--- a/news.html
+++ b/news.html
@@ -19,6 +19,14 @@
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/scroll.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <style>
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+    </style>
 </head>
 
 <body>
