--- a/news.html
+++ b/news.html
@@ -20,7 +20,7 @@
     <link href="css/scroll.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <style>
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 
 body {
   font-family: "Poppins", sans-serif;
