--- a/index.html
+++ b/index.html
@@ -345,11 +345,11 @@ $(document).ready(function(){
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="Co-curiiicular-Activities.html">CURRICULAR ACTIVITIES</a></li>
-                                    <li><a href="Sports-and-Games.html">Sports & Games</a></li>
+                                    <li><a href="Sports-and-Games.html">SPORTS AND GAMES</a></li>
                                     <li><a href="Under_Construction.html">CLUBS & SOCIETIES</a></li>
-                                    <li><a href="announcements.html">Announcements</a></li>
-                                    <li><a href="view-events.html">News & Events</a></li>
-                                    <li><a href="Under_Construction.html">HIGHLIGHTS & ACHIEVEMENTS</a></li>
+                                    <li><a href="announcements.html">ANNOUNCEMENTS</a></li>
+                                    <li><a href="news.html">NEWS AND EVENTS</a></li>
+                                    <!--li><a href="Under_Construction.html">HIGHLIGHTS & ACHIEVEMENTS</a></li-->
                                 </ul>
                             </li>
                             <!--li>
@@ -367,7 +367,7 @@ $(document).ready(function(){
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                 </ul>
                             </li-->
-                            <li><a href="gallery.html">GALLERY</a></li>
+                            <!--li><a href="gallery.html">GALLERY</a></li-->
                             <li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">MORE <b
                                         class="caret"></b></a>
@@ -384,6 +384,7 @@ $(document).ready(function(){
                                 </ul>
                             </li>
                             <!--li><a href="contact-us.html">CONTACT US</a></li-->
+                            <li><a href="gallery.html">GALLERY</a></li>
                         </ul>
                     </div>
                     <!--/.nav-collapse -->
