--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ $(document).ready(function(){
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Grade 5 Scholarships</a>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">GRADE 5</a>
                                         <ul class="dropdown-menu">
                                             <li><a href="Under_Construction.html">admissions</a></li>
                                             <!--li><a href="#">IT</a></li-->
