--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@ $(document).ready(function(){
     <!-- header starts here -->
     <header id="header" class="">
         <!-- header -->
-        <hr class="redline">
-        <hr class="blueline">
+        <hr class="redline"/>
+        <hr class="blueline"/>
         <div class="header-wrapper">
             <div class="header-container">
                 <div>
