--- a/index.html
+++ b/index.html
@@ -295,25 +295,25 @@ $(document).ready(function(){
                                 <ul class="dropdown-menu multi-level">
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">GRADE 5</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="Under_Construction.html">admissions</a></li>
+                                        <!--ul class="dropdown-menu">
+                                            <li><a href="Under_Construction.html">admissions</a></li-->
                                             <!--li><a href="#">IT</a></li-->
                                         </ul>
                                     </li>
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">GCE O/L</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="Under_Construction.html">admissions</a></li>
+                                        <!--ul class="dropdown-menu">
+                                            <li><a href="Under_Construction.html">admissions</a></li-->
                                         </ul>
                                     </li>
                                         <li class="dropdown-submenu">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">GCE A/L</a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="Under_Construction.html">admissions</a></li>
+                                            <!--ul class="dropdown-menu">
+                                                <li><a href="Under_Construction.html">admissions</a></li-->
                                             </ul>
                                     </li>
                                     <li><a href="Academic-Progress.html">ACADEMIC PROGRESS</a></li>
-                                    <li><a href="Academics.php.html">ACADEMIC COUNCIL</a></li>
+                                    <!--li><a href="Academics.php.html">ACADEMIC COUNCIL</a></li-->
                                     <!--li><a href="#">More</a></li-->
                                     <li><a href="Under_Construction.html">NON ACADEMIC</a></li>
 
@@ -368,7 +368,7 @@ $(document).ready(function(){
                                 </ul>
                             </li-->
                             <!--li><a href="gallery.html">GALLERY</a></li-->
-                            <li>
+                            <!--li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">MORE <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
@@ -382,7 +382,7 @@ $(document).ready(function(){
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                 </ul>
-                            </li>
+                            </li-->
                             <!--li><a href="contact-us.html">CONTACT US</a></li-->
                             <li><a href="gallery.html">GALLERY</a></li>
                         </ul>
