--- a/index.html
+++ b/index.html
@@ -293,23 +293,23 @@ $(document).ready(function(){
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">ACADEMICS <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li class="dropdown-submenu">
+                                    <li>
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">GRADE 5</a>
-                                        <!--ul class="dropdown-menu">
-                                            <li><a href="Under_Construction.html">admissions</a></li-->
+                                        <ul>
+                                            <!--li><a href="Under_Construction.html">admissions</a></li-->
                                             <!--li><a href="#">IT</a></li-->
                                         </ul>
                                     </li>
-                                    <li class="dropdown-submenu">
+                                    <li>
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">GCE O/L</a>
-                                        <!--ul class="dropdown-menu">
-                                            <li><a href="Under_Construction.html">admissions</a></li-->
+                                        <ul>
+                                            <!--li><a href="Under_Construction.html">admissions</a></li-->
                                         </ul>
                                     </li>
-                                        <li class="dropdown-submenu">
+                                        <li>
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">GCE A/L</a>
-                                            <!--ul class="dropdown-menu">
-                                                <li><a href="Under_Construction.html">admissions</a></li-->
+                                            <ul>
+                                                <!--li><a href="Under_Construction.html">admissions</a></li-->
                                             </ul>
                                     </li>
                                     <li><a href="Academic-Progress.html">ACADEMIC PROGRESS</a></li>
