--- a/Identity/mission-vision.html
+++ b/Identity/mission-vision.html
@@ -378,7 +378,7 @@ body {
                 </div>
                 <div style="text-align: center;">
                     <!--a href="#" target="_blank"-->
-                        <img class="responsive-img" src="../img/dlsobucrest.jpg" style="width: 250px; height:250px;">
+                        <img class="responsive-img" src="../img/dlscrest.jpg" style="width: 250px; height:250px;">
                     </a>
                 </div>
                 <br/>
@@ -422,7 +422,7 @@ body {
                       <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
                         <div>
                             <a href="https://www.dhanum-saviya.blogspot.com" target="_blank">
-                            <img src="College Assests/College-Items/access-to-lms.png" height="40px" width="auto" class="img-responsive">
+                            <img src="../College Assests/College-Items/access-to-lms.png" height="40px" width="auto" class="img-responsive">
                             </a>
                           </div>
       </div>
