--- a/Identity/mission-vision.html
+++ b/Identity/mission-vision.html
@@ -268,7 +268,7 @@
         </header>
         <!-- /header -->
         <div style="text-align: center;">
-                <img class="responsive-img" src="../img/our vision.jpg">
+                <img class="responsive-img" src="../College Assests/cover_fondatore.jpg">
     </div>
         <section>
             <style>
