--- a/Identity/mission-vision.html
+++ b/Identity/mission-vision.html
@@ -272,6 +272,9 @@
     </div>
         <section>
             <style>
+                p{
+                    margin: 3rem;
+                }
 
 .post-full-meta {
     background: var(--whitegrey);
