--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@ body {
                                     <ul class="dropdown-menu multi-level">
                                         <li><a href="Organizational-Structure.html">OVERVIEW</a></li>
                                         <li><a href="directors_message.html">PRINCIPAL</a></li>
-                                        <li><a href="Under_Construction.html">DEPUTY PRINCIPAL</a></li>
+                                        <li><a href="deputy-principal.html">DEPUTY PRINCIPAL</a></li>
                                         <li><a href="Under_Construction.html">ACADEMIC STAFF</a></li>
                                     </ul>
                                 </li>
@@ -168,27 +168,27 @@ body {
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">ACADEMICS <b
                                             class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
-                                        <li class="dropdown-submenu">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Grade 5 Scholarships</a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="Under_Construction.html">admissions</a></li>
+                                        <li>
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">GRADE 5</a>
+                                            <ul>
+                                                <!--li><a href="Under_Construction.html">admissions</a></li-->
                                                 <!--li><a href="#">IT</a></li-->
                                             </ul>
                                         </li>
-                                        <li class="dropdown-submenu">
+                                        <li>
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">GCE O/L</a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="Under_Construction.html">admissions</a></li>
+                                            <ul>
+                                                <!--li><a href="Under_Construction.html">admissions</a></li-->
                                             </ul>
                                         </li>
-                                            <li class="dropdown-submenu">
+                                            <li>
                                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">GCE A/L</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="Under_Construction.html">admissions</a></li>
+                                                <ul>
+                                                    <!--li><a href="Under_Construction.html">admissions</a></li-->
                                                 </ul>
                                         </li>
                                         <li><a href="Academic-Progress.html">ACADEMIC PROGRESS</a></li>
-                                        <li><a href="Academics.php.html">ACADEMIC COUNCIL</a></li>
+                                        <!--li><a href="Academics.php.html">ACADEMIC COUNCIL</a></li-->
                                         <!--li><a href="#">More</a></li-->
                                         <li><a href="Under_Construction.html">NON ACADEMIC</a></li>
     
@@ -206,10 +206,10 @@ body {
                                 <!--li>
                                     <a href="obu.html" class="dropdown-toggle" data-toggle="dropdown">OLD BOYS UNION <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
-                                        <li><a href="obu.html">Overview</a></li>
-                                        <li><a href="OBU-Constitution.html">OBU Constitution</a></li>
-                                        <li><a href="Under_Construction.html">Coming soon</a></li>
-                                        <li><a href="Under_Construction.html">Coming soon</a></li>
+                                        <li><a href="obu.html">OVERVIEW</a></li>
+                                        <li><a href="Old-Boys-Union.html">OBU INTRODUCTION</a></li>
+                                        <li><a href="OBU-Constitution.html">OBU CONSTITUTION</a></li>
+                                        <li><a href="Under_Construction.html">ANNOUNCEMENTS</a></li>
                                         <li><a href="Under_Construction.html">Coming soon</a></li>
                                         <li><a href="Under_Construction.html">Coming soon</a></li>
                                         <li><a href="Under_Construction.html">Coming soon</a></li>
@@ -220,11 +220,11 @@ body {
                                             class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
                                         <li><a href="Co-curiiicular-Activities.html">CURRICULAR ACTIVITIES</a></li>
-                                        <li><a href="Sports-and-Games.html">Sports & Games</a></li>
+                                        <li><a href="Sports-and-Games.html">SPORTS AND GAMES</a></li>
                                         <li><a href="Under_Construction.html">CLUBS & SOCIETIES</a></li>
-                                        <li><a href="announcements.html">Announcements</a></li>
-                                        <li><a href="view-events.html">News & Events</a></li>
-                                        <li><a href="Under_Construction.html">HIGHLIGHTS & ACHIEVEMENTS</a></li>
+                                        <li><a href="announcements.html">ANNOUNCEMENTS</a></li>
+                                        <li><a href="news.html">NEWS AND EVENTS</a></li>
+                                        <!--li><a href="Under_Construction.html">HIGHLIGHTS & ACHIEVEMENTS</a></li-->
                                     </ul>
                                 </li>
                                 <!--li>
@@ -242,8 +242,8 @@ body {
                                         <li><a href="Under_Construction.html">Coming soon</a></li>
                                     </ul>
                                 </li-->
-                                <li><a href="gallery.html">GALLERY</a></li>
-                                <li>
+                                <!--li><a href="gallery.html">GALLERY</a></li-->
+                                <!--li>
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">MORE <b
                                             class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
@@ -257,8 +257,9 @@ body {
                                         <li><a href="Under_Construction.html">Coming soon</a></li>
                                         <li><a href="Under_Construction.html">Coming soon</a></li>
                                     </ul>
-                                </li>
-                                <li><a href="contact-us.html">CONTACT US</a></li>
+                                </li-->
+                                <!--li><a href="contact-us.html">CONTACT US</a></li-->
+                                <li><a href="gallery.html">GALLERY</a></li>
                             </ul>
                         </div>
                         <!--/.nav-collapse -->
