--- a/Organizational-Structure.html
+++ b/Organizational-Structure.html
@@ -270,7 +270,7 @@
     <!-- /header -->
     <div style="text-align: center;">
         <a href="#" target="_blank"-->
-            <img class="responsive-img" src="College Assests/Section Banner Landscape.jpg">
+            <img class="responsive-img" src="Administration/admin-staff.jpg">
         </a>
 </div>
     <section>
