--- a/index.html
+++ b/index.html
@@ -647,14 +647,17 @@ $(document).ready(function(){
         }
       }
 
-
+      img-lms {
+    max-width: 66%;
+}
 
   </style>
   <div class="box1">
     <h1>Access the College LMS</h1>
-    <img src="img/PicsArt_12-22-07.37.31.jpg"  style="align-items: center;">
-    <div class="col-md-4 cta-button" style="align-items: center;">
-    <a href="#" class="btn btn-lg btn-block btn-primary" style="align-items: center;">LMS Portal Login</a>
+    <img class="img-lms" src="img/PicsArt_12-22-07.37.31.jpg" width="45%" style="align-items: center;">
+    <br>
+    <div class="button" style="align-items: center;">
+    <a href="#" class="btn btn-primary btn-lg" style="align-items: center;">LMS Portal Login</a>
   </div>
   </div>
 <br>
