--- a/index.html
+++ b/index.html
@@ -661,7 +661,6 @@ $(document).ready(function(){
   </div>
   </div>
 <br>
-<br>
             <!-- Announcements -->
             <div class="col-sm-4" id="announcements">
                 <div class='announcement-content '>
@@ -796,8 +795,10 @@ $(document).ready(function(){
                     <div class="widgets-title"><h2>News</h2></div>
                     <ul id="news-list">
                         <li>
+                            <span class="css_blink ">
                             <a href="blog.html" target="_blank">Dear Old Boys & Well Wishers</a> of De La Salle College, It is a well known fact that Rev Br Joseph Jayakanthan who was waiting for all of us, took over duties as the Principal of the school on October 06th,  2021.
 
+                            </span>
                         </li>
                     </ul>
                     <div id="news-list-pagination">
