--- a/index.html
+++ b/index.html
@@ -677,9 +677,9 @@ $(document).ready(function(){
                         </li>
                         <li>
                             Covid 19 Vaccination programme <a
-                                href="www.delasalle.lk" target="_blank">www.delasalle.lk </a><a
+                                href="" target="_blank"></a><a
                                 href="announcements.html" target="_blank">
-                            Announcements </a>
+                            See more </a>
                         </li>
                     </ul>
                     <div id="announcement-list-pagination">
@@ -797,8 +797,19 @@ $(document).ready(function(){
                         <li>
                             <span class="css_blink ">
                             <a href="blog.html" target="_blank">Dear Old Boys & Well Wishers</a> of De La Salle College, It is a well known fact that Rev Br Joseph Jayakanthan who was waiting for all of us, took over duties as the Principal of the school on October 06th,  2021.
-
                             </span>
+                            </br><a href="news.html">See more</a>
+                           
+                        </li>
+                    </ul>
+
+                    <ul id="news-list">
+                        <li>
+                            <span class="css_blink ">
+                            <a href="blog.html" target="_blank"></a>Nearly after 10 months a Holy Mass offered by senior students of the college, and
+                            </span>
+                            </br><a href="news.html">See more</a>
+                           
                         </li>
                     </ul>
                     <div id="news-list-pagination">
