--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@ $(document).ready(function(){
                                 href="#" target="_blank"> GCE Advanced Level academic year 2021/2023</a>
                         </li>
                         <li>
-                            For queries related to <b>any of programs </b>contact us at: &nbsp; &nbsp; <span
+                            For queries related to <b>any of programs </b>contact us at:<span
                                 style="font-size: 12px; font-weight: bold;color:Black"><a
                                 href="mailto:college@delasalle.lk">college@delasalle.lk</a></span>
                         </li>
