--- a/The-Coat-of-Arms.html
+++ b/The-Coat-of-Arms.html
@@ -146,7 +146,7 @@
                                     </li>
                                     <!--li><a href="Chronology College History.html">CHRONOLOGY COLLEGE HISTORY</a></li-->
                                     <li><a href="Activities-in-Development-Stage.html">ACTIVITIES IN DEVELOPMENT STAGE</a></li>
-                                    <li><a href="The-Coat-of-Arms.html">THE COAT OF ARMS O THE DE LA SALLE  BROTHERS</a></li>
+                                    <li class="active"><a href="The-Coat-of-Arms.html">THE COAT OF ARMS O THE DE LA SALLE  BROTHERS</a></li>
                                     <li><a href="Bridge-between-the-College-and-the-Old-Boys.html">BRIDGE BETWEEN THE COLLEGE AND THE OLD-BOYS</a></li>
                                     
                                 </ul>
@@ -159,6 +159,7 @@
                                     <li><a href="directors_message.html">PRINCIPAL</a></li>
                                     <li><a href="deputy-principal.html">DEPUTY PRINCIPAL</a></li>
                                     <li><a href="Under_Construction.html">ACADEMIC STAFF</a></li>
+                                    <li><a href="student_corner.html">STUDENTS CORNER</a></li>
                                 </ul>
                             </li>
 
