--- a/index.html
+++ b/index.html
@@ -1236,13 +1236,13 @@ $(document).ready(function(){
       </div>
     </div>
     <hr class="hr-text" data-content="">
-    <p style="color: rgba(248, 248, 255, 0.719); text-align: center; size: auto;">© Copyright 2021 | De La Salle College, Mutwal, Sri Lanka.<br>All Rights Reserved</p>
+    <p style="color: rgba(248, 248, 255, 0.719); text-align: center; size: auto;">© Copyright 2021 | De La Salle College, Mutwal, Sri Lanka.<br>All Rights <svg class="heart" viewBox="0 0 32 29.6">
+        <path d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2
+          c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"></path>
+      </svg> Reserved</p>
     <div class="container">
     <div>  
-        <p style="text-align: justify;"><font size="auto" color="#FFFFFF">Disclaimer:<br/> The contents in the website are for information purpose only. DLS College ICT Unite regularly monitors and updates the information on this website. We attempt to ensure that the information on this website is correct, however, we do not warrant its completeness or accuracy. No rights can be derived from the information contained in the DLS College Official website. The website may contain links to websites of third party organizations.We cannot be held responsible for any consequences arising from the use of information obtained from these websites. Designed and Developed with <svg class="heart" viewBox="0 0 32 29.6">
-            <path d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2
-              c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"></path>
-          </svg> by Kasun Chanuka Fernando</font></p>
+        <p style="text-align: justify;"><font size="auto" color="#FFFFFF">Disclaimer:<br/> The contents in the website are for information purpose only. DLS College ICT Unite regularly monitors and updates the information on this website. We attempt to ensure that the information on this website is correct, however, we do not warrant its completeness or accuracy. No rights can be derived from the information contained in the DLS College Official website. The website may contain links to websites of third party organizations.We cannot be held responsible for any consequences arising from the use of information obtained from these websites. Designed and Developed by Kasun Chanuka Fernando</font></p>
         </div>
     </div>
             </div>
