--- a/index.html
+++ b/index.html
@@ -651,9 +651,11 @@ $(document).ready(function(){
     max-width: 77%;
 }
 
-#ticker_02 {
+@media (max-width: 480px) {
+    #ticker_02 {
 	height: 100px;
     position: relative;
+}
 }
 
 
