--- a/index.html
+++ b/index.html
@@ -838,8 +838,7 @@ $(document).ready(function(){
             </div>
         </div>
     </div>
-<br>
-<br>
+    </div>
  <!--RECENT NEWS AND EVENTS OF DLS-->
     <section>
         <style>
