--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@ $(document).ready(function(){
 
 @media (max-width: 480px) {
     #ticker_02 {
-	height: 100px;
+	height: 0;
     position: relative;
 }
 }
