--- a/index.html
+++ b/index.html
@@ -655,6 +655,7 @@ $(document).ready(function(){
     #ticker_02 {
 	height: 0;
     position: relative;
+    padding-bottom: 11rem;
 }
 }
 #ticker_02 {
