--- a/index.html
+++ b/index.html
@@ -834,7 +834,8 @@ $(document).ready(function(){
             </div>
         </div>
     </div>
-    </div>
+</div>
+</section>
  <!--RECENT NEWS AND EVENTS OF DLS-->
     <section>
         <style>
