--- a/index.html
+++ b/index.html
@@ -650,6 +650,10 @@ $(document).ready(function(){
       img-lms {
     max-width: 77%;
 }
+
+#ticker_02 {
+	height: 100px;
+}
   </style>
   <div class="box1">
     <h1>Access the College LMS</h1>
@@ -803,7 +807,7 @@ $(document).ready(function(){
                             </span>
                             <br><a href="news.html">See more</a>
                         </li>
-                        
+
                     </ul>
 
                     <div id="news-list-pagination">
