--- a/index.html
+++ b/index.html
@@ -812,7 +812,8 @@ $(document).ready(function(){
                             </br><a href="news.html">See more</a>
                         </li>
                     </ul>
-                    <br>
+                </div>
+                <br>
                     <div id="news-list-pagination">
                         <a id="news-list-previous" href="#">
                             <span><i class="fa fa-chevron-left" aria-hidden="true"></i></span>
