--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@ $(document).ready(function(){
                                                     <li><i class="fa fa-calendar" aria-hidden="true"></i> Dec 11, 2021</li>
                                                     <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                                 </ul>
-                                                <p>we are so excited to announce The launch of our redesigned website and launch announcement on December 11th, 2021, after nearly two months of the efforts and dedication of our college student Mast Kasun Chanuka.</p>
+                                                <p>We are delighted to announce the launch of our new  college website. We are pleased to officially announce the launch on December, 2021,</p>
                                                 <a href="news/our-new-college-website-has-been-launched.php.html">Read More...</a>
                                             </div>
                                         </div>
