--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@ $(document).ready(function(){
                                                 <li><i class="fa fa-calendar" aria-hidden="true"></i> May 11, 2021</li>
                                                 <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
                                             </ul>
-                                            <p>Today marks 116 years since De La Salle College, Colombo, was founded on February 1, 1095.</p>
+                                            <p>Today marks 116 years since De La Salle College, Colombo, was founded on February 1, 1905 by the LaSallian Brothers.Since then the school has been headed</p>
                                             <a href="https://www.facebook.com/DeLaSalleCollegeColombo/">Read More...</a>
                                         </div>
                                     </div>
