--- a/index.html
+++ b/index.html
@@ -263,17 +263,14 @@ $(document).ready(function(){
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">COLLEGE FACILITIES</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="Physical-Facilities.html">Physical Facilities</a></li>
-                                            <li><a href="BRIEF-HISTORY.html">1</a></li>
-                                            <li><a href="Chronoloy-College-History.html">2</a></li>
-                                            <li><a href="The-Coat-of-Arms.html">2</a></li>
-                                            <li><a href="College-Directors.html">t</a></li>
+                                            <li><a href="Physical-Facilities.html">PHYSICAL FACILITIES</a></li>
+                                            <li><a href="School-Layout-Plan.html">COLLEGE LAYOUT</a></li>
                                             <!--li><a href="Identity/tcs.html">TCS</a></li-->
                                         </ul>
                                     </li>
                                     <!--li><a href="Chronology College History.html">CHRONOLOGY COLLEGE HISTORY</a></li-->
                                     <li><a href="Activities-in-Development-Stage.html">ACTIVITIES IN DEVELOPMENT STAGE</a></li>
-                                    <li><a href="The-Coat-of-Arms.html">THE COAT OF ARMS O  THE  DE LA SALLE  BROTHERS</a></li>
+                                    <li><a href="The-Coat-of-Arms.html">THE COAT OF ARMS O THE DE LA SALLE  BROTHERS</a></li>
                                     <li><a href="Bridge-between-the-College-and-the-Old-Boys.html">BRIDGE BETWEEN THE COLLEGE AND THE OLD-BOYS</a></li>
                                     
                                 </ul>
@@ -286,6 +283,7 @@ $(document).ready(function(){
                                     <li><a href="directors_message.html">PRINCIPAL</a></li>
                                     <li><a href="deputy-principal.html">DEPUTY PRINCIPAL</a></li>
                                     <li><a href="Under_Construction.html">ACADEMIC STAFF</a></li>
+                                    <li><a href="student_corner.html">STUDENTS CORNER</a></li>
                                 </ul>
                             </li>
 
