--- a/Organizational-Structure.html
+++ b/Organizational-Structure.html
@@ -269,7 +269,7 @@
     </header>
     <!-- /header -->
     <div style="text-align: center;">
-        <a href="#" target="_blank"-->
+        <a href="#" target="_blank">
             <img class="responsive-img" src="Administration/admin-staff.jpg">
         </a>
 </div>
