--- a/staff.html
+++ b/staff.html
@@ -156,7 +156,7 @@
                                         <li><a href="Organizational-Structure.html">OVERVIEW</a></li>
                                         <li><a href="directors_message.html">PRINCIPAL</a></li>
                                         <li><a href="deputy-principal.html">DEPUTY PRINCIPAL</a></li>
-                                        <li><a href="Under_Construction.html">ACADEMIC STAFF</a></li>
+                                        <li class="active"><a href="Under_Construction.html">ACADEMIC STAFF</a></li>
                                         <li><a href="student_corner.html">STUDENTS CORNER</a></li>
                                     </ul>
                                 </li>
